--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <!-- res/values/strings.xml -->
     <string name="cat_budget_approach">Category budget warning</string>
     <string name="cat_budget_exceeded">Category budget exceeded</string>
-    <string name="update_category">Update Category</string>
+    <string name="update_category">Update</string>
     <string name="budget_approach">Budget warning</string>
     <string name="budget_approach_msg">You have used %1$d%% of your monthly budget.</string>
     <string name="budget_exceeded">Budget exceeded</string>
